Update link to Task 1 to use relative path

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
     <div class="grid">
 
       <!-- Task 1 -->
-      <a href="Task-1.html" class="card">
+      <a href="../Task-1.html" class="card">
         <div class="icon"><span class="material-icons">waving_hand</span></div>
         <h3>Task 1</h3>
         <p>Introduction</p>
